--- a/app/src/main/res/values-be-rBY/strings.xml
+++ b/app/src/main/res/values-be-rBY/strings.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Clevertec_task1</string>
+    <string name="hello" translatable="false">Прывітанне Cвет!!</string>
+    <string name="are_you_sure_want_to_exit">Вы ўпэўненыя, што хочаце выйсці?</string>
+    <string name="yes">Так</string>
+    <string name="no">Не</string>
 </resources>
