--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="are_you_sure_want_to_exit">Are you suew want to exit?</string>
     <string name="yes">yes</string>
     <string name="no">no</string>
+    <string name="element">element</string>
 </resources>
